2007-04-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.cpp, itpp/base/random.h,
	tests/cholesky_test.ref, tests/circular_buffer_test.ref,
	tests/det_test.ref, tests/eigen_test.ref,
	tests/filter_design_test.ref, tests/filter_test.ref,
	tests/histogram_test.ref, tests/inv_test.ref, tests/ldpc_test.cpp,
	tests/ldpc_test.ref, tests/ls_solve_test.ref, tests/lu_test.ref,
	tests/matfunc_test.ref, tests/mat_test.ref,
	tests/modulator_nd_test.ref, tests/modulator_test.ref,
	tests/poly_test.ref, tests/qr_test.ref, tests/rand_test.ref,
	tests/schur_test.ref, tests/sigfun_test.ref,
	tests/source_test.ref, tests/sparse_test.ref, tests/stat_test.ref,
	tests/svd_test.ref, tests/transforms_test.ref,
	tests/turbo_test.ref, tests/vec_test.ref: New implementation of
	the Normal_RNG sample() function, which uses the so-called
	Ziggurat algorithm. The new generator is about five times faster
	than the previous one using the Box-Mueller method. This fixes
	feature request [1707969]. Thanks to Sean Finney for providing a
	patch.

2007-04-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/tutorial/src/ldpc_bersim_awgn.cpp, itpp/comm/ldpc.cpp,
	itpp/comm/ldpc.h, tests/ldpc_test.ref: Fixed bugs in
	LDPC_Code::load_code() and LDPC_Code::save_code() functions. It
	could happen that LDPC generator object might be left
	uninitialised when loading the coded from a binary file. Removed
	unnecessary integrity_check() execution from the load_code()
	function. setup_decoder() method replaced with three separate
	methods, which are more flexible to use. Tutorial example updated
	to reflect recent changes.

2007-04-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/itmex.h: Fixed bug [1703731] by implementing the missing
	double2mxArray() and double_complex2mxArray() functions. Thanks to
	Danilo Zanatta Filho for providing a patch.

2007-04-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/**/*.{cpp,h}: Copyright dates updated to `1995-2007'
