@@ -1,7 +1,7 @@
 /*!
  * \file 
  * \brief Implementation of some specific functions useful in communications
- * \author Tony Ottosson
+ * \author Tony Ottosson and Erik G. Larsson
  *
  * $Date$
  * $Revision$
@@ -35,7 +35,7 @@
 #include <itpp/base/specmat.h>
 #include <itpp/base/matfunc.h>
 #include <itpp/base/binary.h>
-
+#include <itpp/base/sort.h>
 
 namespace itpp { 
 
@@ -51,8 +51,8 @@ namespace itpp {
       out.zeros();
       out.set_col(0, concat(zeros_b(1<<(m-1)), ones_b(1<<(m-1))) );
       for (int i=0; i<m-1; i++) {
-				temp = bb.get_col(i);
-				out.set_col(i+1, concat(temp, reverse(temp)) );
+	temp = bb.get_col(i);
+	out.set_col(i+1, concat(temp, reverse(temp)) );
       }
       return out;
     }
@@ -65,7 +65,7 @@ namespace itpp {
     it_assert_debug(a.size() == b.size(), "hamming_distance()");
     for (i=0; i<a.size(); i++)
       if (a(i) != b(i))
-				n++;
+	n++;
     
     return n;
   }
@@ -73,12 +73,43 @@ namespace itpp {
   int weight(const bvec &a)
   {
     int i, n=0;
-
+    
     for (i=0; i<a.size(); i++)
       if (a(i)==bin(1))
-				n++;
+	n++;
     
     return n;
   }
+  
+  vec waterfilling(const vec& alpha, double P) // added by EGL April 2007
+  {
+    int n=length(alpha);
+    it_assert(n > 0, "waterfilling(): alpha vector cannot have zero length");
+    it_assert(P > 0, "waterfilling(): Power constraint must be positive");
 
+    ivec ind=sort_index(alpha); // indices in increasing order
+    it_assert(alpha(ind(0)) > 0, "waterfilling(): Gains must be positive");
+    
+    // find lambda
+    double lambda;
+    for (int m=0; m<n; m++) {
+      // try m,...,n-1 nonzero allocation
+      double t=0;
+      for (int j=m; j<n; j++) {
+	t+=1.0/alpha(ind(j));
+      }
+      t=(t+P)/(n-m);
+      lambda=1.0/t;
+      if (lambda < alpha(ind(m)))
+	break;
+    }
+    
+    vec result;
+    for (int j=0; j<n; j++) {
+      result(j) = ((lambda < alpha(j)) ? (1.0/lambda - 1.0/alpha(j)) : 0.0);
+    }
+    
+    return result;
+  }
+  
 } // namespace itpp
